# image_viewer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
img/: nikon.ppm
lib/glad/: CMakeLists.txt
lib/imgp/: CMakeLists.txt
lib/imgp/include/: imgp.h
lib/imgp/src/: imgp.c  imgp_internal.h
lib/imgp/src/formats/: bmp.c  bmp.h  png.c  png.h  ppm.c  ppm.h
lib/imgp/src/util/: bit_stream.c  bit_stream.h
src/: a.out  bit_stream.c  bit_stream.h  img.c  img.h  img_bmp.c  img_bmp.h  img_png.c  img_png.h  img_ppm.c  img_ppm.h  main.c  shader.h  test.c
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
